--- a/page-yavorovskaya-niagara.html
+++ b/page-yavorovskaya-niagara.html
@@ -60,6 +60,7 @@
                     <li class=""><a href="index.html">Главная</a></li>
                     <li class=""><a href="about.html">Отзывы </a></li>
                     <li class=""><a href="packages.html">Туры</a></li>
+                    <li class=""><a href="blog.html">Блог</a></li>
                     <li class=""><a href="contact.html">Контакты</a></li>
                     <li class="booking"><a href="booking.html">Забронировать</a></li>
                 </ul>
