--- a/blog-Travel-food.html
+++ b/blog-Travel-food.html
@@ -124,6 +124,8 @@
                 <div class="single-post-content">
                     <p class="alphabet mb-4 text-justify"><span class="big-letter">П</span>
                       итание должно покрывать расход энергии туристов во время путешествия. 
+                    </p>
+                    <p class="mb-4 text-left">
                       Как правило, этот расход в условиях даже несложного маршрута составляет 
                       ежедневно на каждого человека 3 000 - 4000 калорий. Продукты должны 
                       быть правильно подобраны, включать оптимальное количество жиров, 
