--- a/blog-Travel-food.html
+++ b/blog-Travel-food.html
@@ -125,7 +125,7 @@
                     <p class="alphabet mb-4 text-justify"><span class="big-letter">П</span>
                       итание должно покрывать расход энергии туристов во время путешествия. 
                     </p>
-                    <p class="mb-4 text-left">
+                    <p class="mb-4 text-justify">
                       Как правило, этот расход в условиях даже несложного маршрута составляет 
                       ежедневно на каждого человека 3 000 - 4000 калорий. Продукты должны 
                       быть правильно подобраны, включать оптимальное количество жиров, 
@@ -142,7 +142,7 @@
 		                   	</footer>-->
                     </blockquote>
                   
-                    <p class="mb-4 text-left">
+                    <p class="mb-4 text-justify">
                       В несложном путешествии распорядок дня обычно предусматривает трехразовое горячее питание. 
                     </p>
                   
