--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                             Самая вкусная экскурсия
                         </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>18 Июля</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>08 Августа</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
