--- a/blog-Arrested-on-the-trip.html
+++ b/blog-Arrested-on-the-trip.html
@@ -122,7 +122,7 @@
                 </div>
                 <div class="single-post-content">
                     <p class="alphabet mb-4 text-justify"><span class="big-letter">П</span>
-                      режде всего, гражданам Украины предоставляется соответствующее содействие
+                      утешествуя, будьтей осторожны и соблюденайте законодательство страны пребывания. В случае задержания, прежде всего, гражданам Украины предоставляется соответствующее содействие
                       в поиске квалифицированного защитника или обеспечении бесплатной правовой помощью,
                       если такая возможность предусмотрена законодательством соответствующей страны. 
 		    </p>
