--- a/blog-Travel-abroad-of-citizens-of-Ukraine.html
+++ b/blog-Travel-abroad-of-citizens-of-Ukraine.html
@@ -38,6 +38,10 @@
     <link href="css/SmoothScrolling.css" rel="stylesheet"><!-- SmoothScrolling.css -->
     <link href="css/font-awesome.min.css" rel="stylesheet"><!-- fontawesome css -->
 	
+    <!-- Google AdSense (реклама) -->
+     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9698860918112764"
+     crossorigin="anonymous"></script>
+    <!-- //Google AdSense (реклама) -->
 </head>
 <body>
     
