--- a/page-Dzharylgach.html
+++ b/page-Dzharylgach.html
@@ -62,6 +62,11 @@
 		    /*background: rgba(191, 63, 191, 0.4);*/
 		}
 	</style>
+	
+    <!-- Google AdSense (реклама) -->
+     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9698860918112764"
+     crossorigin="anonymous"></script>
+    <!-- //Google AdSense (реклама) -->
 </head>
   <body>
 
