--- a/page-Kharkov.html
+++ b/page-Kharkov.html
@@ -40,6 +40,10 @@
         rel="stylesheet">
     <!-- //google fonts -->
 
+     <!-- Google AdSense (реклама) -->
+     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9698860918112764"
+     crossorigin="anonymous"></script>
+    <!-- //Google AdSense (реклама) -->
 </head>
 
 <body>
