--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -40,6 +40,11 @@
     <link href="./libs/owl-carousel/owl.theme.default.min.css" rel="stylesheet" type='text/css' />
     <!-- //owl-carousel -->
 	
+    <!-- Google AdSense (реклама) -->
+     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9698860918112764"
+     crossorigin="anonymous"></script>
+    <!-- //Google AdSense (реклама) -->
+	
 	<style>
 		@media (max-width: 1199px) {
 			h3.title {font-size: 54px;}
