--- a/page-Pink-Lake.html
+++ b/page-Pink-Lake.html
@@ -49,6 +49,10 @@
     <link href="./libs/owl-carousel/owl.carousel.min.css" rel="stylesheet" type='text/css' />
     <link href="./libs/owl-carousel/owl.theme.default.min.css" rel="stylesheet" type='text/css' />
     <!-- //owl-carousel -->
+     <!-- Google AdSense (реклама) -->
+     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9698860918112764"
+     crossorigin="anonymous"></script>
+    <!-- //Google AdSense (реклама) -->
     
     <style>
         .bg-pink {
