--- a/page-Svyatogorsk-and-Soledar.html
+++ b/page-Svyatogorsk-and-Soledar.html
@@ -45,7 +45,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
     <link rel="stylesheet" href="./libs/fancybox/gallery-style.css">
     <!-- //Fancybox  -->
-
+    <!-- Google AdSense (реклама) -->
+     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9698860918112764"
+     crossorigin="anonymous"></script>
+    <!-- //Google AdSense (реклама) -->
 </head>
 
 <body>
