--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -128,7 +128,7 @@
 				<span id="сheeseFarm">Сырная ферма</span> и <span id="apiary">Пасека</span>
                         </h4>
                         
-                       <p class="p-2 txt-alg-jf bg-primary text-white">
+                       <p class="p-2 txt-alg-jf bg-success text-white">
                            Самая вкусная <img src="https://github.githubassets.com/images/icons/emoji/unicode/1f604.png" alt="" height="20px">
 			       <span id="ExcursionToZaporozhye">экскурсия в Запорожье.</span>
 			   1 раз в год качаем мед!
@@ -140,7 +140,7 @@
 		            <span id="travels"> Путешествие</span> в котором мы увидим милых козочек, узнаем секреты изготовления твердых и мягких сыров, 
                             <span id="cheeseTasting">а еще на дегустации мы попробуем настоящий сыр, свежее козье молочко и вкуснейший йогурт.</span> 
                         </p>
-			<p class="p-2 txt-alg-jf bg-primary text-white">
+			<p class="p-2 txt-alg-jf bg-light">
 			    ВАУ! САМЫЙ ВКУСНЫЙ И УДИВИТЕЛЬНЫЙ ПРОЦЕСС! ТОЛЬКО 1 РАЗ В 2021 ГОДУ КАЧАЕМ МЕД!
 			</p>
                         <p class="txt-alg-jf">
@@ -151,7 +151,7 @@
 				<img src="/images/Emoji/1f600.png" alt="" height="20px">
                          </p>
                          <div id="MoreDetails" style="display: none;">
-                         <p class="p-2 txt-alg-jf bg-primary text-white">
+                         <p class="p-2 txt-alg-jf bg-light">
                              ТАКОГО ВЫ ЕЩЕ НЕ ВИДЕЛИ И НЕ ПРОБОВАЛИ! БРОНИРУЙТЕ УЖЕ СЕЙЧАС! МЕСТА ОГРАНИЧЕНЫ!
                              КТО БУДЕТ ДОЛГО ДУМАТЬ СИДИТ ДОМА И ЗАВИДУЕТ МОЛЧА 
                              Ждем Вас, Ваших родных, близких и друзей на экскурсию! Собери компанию 10 
