--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -177,7 +177,7 @@
                             </span>
                             <hr>
                             <span class="txt-alg-jf">
-                                С <strong>02 августа </strong><u>400 грн.</u> - взрослые, <u>390 грн.</u> - дети.
+                                С <strong>02 августа: </strong><u>400 грн.</u> - взрослые, <u>390 грн.</u> - дети.
                             </span>
                         </div>
                         <!-- //Alert info -->
