--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -172,7 +172,7 @@
                             <br />
                             <br />
                             <span class="txt-alg-jf">
-                                Цена билета ДО <strong>1 августа*: </strong>  от 6 лет - <u> 390 грн.</u>,  до 6 лет - <u>375 грн.</u> и до 
+                                Цена билета ДО <strong>1 августа*: </strong>  от 10 лет - <u> 390 грн.</u>,  от 4 до 10 лет - <u>375 грн.</u> и до 
                                 4 лет бесплатно (без предоставления отдельного места в транспорте). 
                             </span>
                             <hr>
