--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -152,7 +152,7 @@
                          <div id="MoreDetails" style="display: none;">
                          <p class="p-2 txt-alg-jf bg-light">
                              ТАКОГО ВЫ ЕЩЕ НЕ ВИДЕЛИ И НЕ ПРОБОВАЛИ! БРОНИРУЙТЕ УЖЕ СЕЙЧАС! МЕСТА ОГРАНИЧЕНЫ!
-                             КТО БУДЕТ ДОЛГО ДУМАТЬ СИДИТ ДОМА И ЗАВИДУЕТ МОЛЧА 
+                             КТО БУДЕТ ДОЛГО ДУМАТЬ СИДИТ ДОМА И ЗАВИДУЕТ МОЛЧА!
                              Ждем Вас, Ваших родных, близких и друзей на экскурсию! Собери компанию 10 
                              человек, 11 едет бесплатно )
                          </p>
