--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -129,7 +129,8 @@
                         </h4>
                         
                        <p class="p-2 txt-alg-jf bg-success text-white">
-                           Самая вкусная <img src="https://github.githubassets.com/images/icons/emoji/unicode/1f604.png" alt="" height="20px">
+                           Самая вкусная
+                               <!-- <img src="https://github.githubassets.com/images/icons/emoji/unicode/1f604.png" alt="" height="20px">-->
 			       <span id="ExcursionToZaporozhye">экскурсия в Запорожье.</span>			   
                         </p>
                         <p class="txt-alg-jf">
