--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -128,7 +128,7 @@
 				<span id="сheeseFarm">Сырная ферма</span> и <span id="apiary">Пасека</span>
                         </h4>
                         
-                       <p class="p-2 txt-alg-jf bg-success text-white">
+                       <p class="p-2 bg-success text-white">
                            Самая вкусная
                                <!-- <img src="https://github.githubassets.com/images/icons/emoji/unicode/1f604.png" alt="" height="20px">-->
 			       <span id="ExcursionToZaporozhye">экскурсия в Запорожье.</span>			   
