--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -134,7 +134,11 @@
 			       <span id="ExcursionToZaporozhye">экскурсия в Запорожье.</span>			   
                         </p>
                         <p class="txt-alg-jf">
-                            Удивительные нубийские козы, миниатюрные коровы, самые вкусные сыры <span id="Zaporozhye">Запорожья и области!</span>
+                            Удивительные нубийские козы
+                            <img src="./images/Emoji/128016.png" alt="emoji" height="20px">
+                            , миниатюрные коровы
+                            <img src="./images/Emoji/128004.png" alt="emoji" height="20px">
+                            , самые вкусные сыры <span id="Zaporozhye">Запорожья и области!</span>
                             Вы такого <span id="tourism">туризма</span> еще не видели и не пробовали! 
                             Сыры с Запорожской душой и поразительными вкусами от любителя до гурмана!
 		            <span id="travels"> Путешествие</span> в котором мы увидим милых козочек, узнаем секреты изготовления твердых и мягких сыров, 
@@ -148,6 +152,7 @@
                              Мы побываем в роли настоящего пасечника примерив
                              на себя защитный костюм, <span id="honeyTasting">а на дегустации попробуем вкуснейший
 				сотовый мед</span> и узнаем истории  пасеки и пчелок!
+                                <img src="./images/Emoji/128029.png" alt="emoji" height="20px">
 				<img src="/images/Emoji/1f600.png" alt="" height="20px">
                          </p>
                          <div id="MoreDetails" style="display: none;">
