--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -135,9 +135,9 @@
                         </p>
                         <p class="txt-alg-jf">
                             Удивительные нубийские козы
-                            <img src="./images/Emoji/128016.png" alt="emoji" height="20px">,
+                            <img src="./images/Emoji/128016.png" alt="emoji" height="20px">
                             миниатюрные коровы
-                            <img src="./images/Emoji/128004.png" alt="emoji" height="20px">,
+                            <img src="./images/Emoji/128004.png" alt="emoji" height="20px">
                             самые вкусные сыры <span id="Zaporozhye">Запорожья и области!</span>
                             Вы такого <span id="tourism">туризма</span> еще не видели и не пробовали! 
                             Сыры с Запорожской душой и поразительными вкусами от любителя до гурмана!
