--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -140,6 +140,7 @@
                         </p>
 			<p class="p-2 txt-alg-jf bg-light">
 			    ВАУ! САМЫЙ ВКУСНЫЙ И УДИВИТЕЛЬНЫЙ ПРОЦЕСС! ТОЛЬКО 1 РАЗ В 2021 ГОДУ КАЧАЕМ МЕД!
+			<img src="./images/Emoji/honey-jar.png" alt="emoji" height="20px">
 			</p>
                         <p class="txt-alg-jf">
 		             Бывали у настоящих пчеловодов <span id="honeyExcursion">на медовой экскурсии</span>?!
