--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -139,7 +139,7 @@
                             <span id="cheeseTasting">а еще на дегустации мы попробуем настоящий сыр, свежее козье молочко и вкуснейший йогурт.</span> 
                         </p>
 			<p class="p-2 txt-alg-jf bg-light">
-			    ВАУ! САМЫЙ ВКУСНЫЙ И УДИВИТЕЛЬНЫЙ ПРОЦЕСС! ТОЛЬКО 1 РАЗ В 2021 ГОДУ КАЧАЕМ МЕД!
+			  САМЫЙ ВКУСНЫЙ И УДИВИТЕЛЬНЫЙ ПРОЦЕСС! ТОЛЬКО 1 РАЗ В 2021 ГОДУ КАЧАЕМ МЕД!
 			<img src="./images/Emoji/honey-jar.png" alt="emoji" height="20px">
 			</p>
                         <p class="txt-alg-jf">
