--- a/page-Dzharylgach.html
+++ b/page-Dzharylgach.html
@@ -110,6 +110,7 @@
                   <ol class="breadcrumb">
                      <li class="breadcrumb-item"><a class="text-primary" href="index.html">Главная</a></li>
                      <li class="breadcrumb-item"><a class="text-primary" href="packages.html">Туры</a></li>
+		     <li class="breadcrumb-item"><a class="text-primary" href="packages-page-two.html">Туры, стр.2</a></li>
                      <li class="breadcrumb-item active" aria-current="page">Джарылгач - Украинские Мальдивы</li>
                    </ol>
                 </nav>
@@ -130,7 +131,7 @@
                             <ul class="listing mt-3">
                                 <li>
                                     <!-- Дата -->
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span  class="dateOfTravel">24 - 25 Июля  </span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span  class="dateOfTravel">Под Заказ</span>
                                     <!-- //Дата -->
                                 </li>
                             </ul>
