--- a/packages-page-two.html
+++ b/packages-page-two.html
@@ -221,7 +221,7 @@
                             <img src="images/Dzharylgach/home-Dzharylgach.jpg" alt="baloon-fast"
                                 class="img-fluid" />
                         </a>
-                        <p><span class="fa fa-tags"></span> <span>2500грн.</span></p>
+                       <!-- <p><span class="fa fa-tags"></span> <span>2500грн.</span></p>-->
                     </div>
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Херсонская обл.</h6>
@@ -234,7 +234,7 @@
                             Джарылгач - Украинские Мальдивы
                         </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 24 - 25 Июля 2021 Года </span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> Под Заказ </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li>
                         </ul>
                     </div>
