--- a/page-balloon-festival.html
+++ b/page-balloon-festival.html
@@ -99,7 +99,7 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span class="dateOfTravel">Под Заказ</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span class="dateOfTravel">25-26 Сентября</span>
                                 </li>
                             </ul>
                         </div>
