--- a/packages.html
+++ b/packages.html
@@ -311,7 +311,7 @@
                             <img src="images/Baloon-fast/balloon-festival-min.jpg" alt="baloon-fast"
                                 class="img-fluid" />
                         </a>
-                     <!--   <p><span class="fa fa-tags"></span> <span>2600грн.</span></p>-->
+                        <p><span class="fa fa-tags"></span> <span>2600грн.</span></p>
                     </div>
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Украина</h6>
@@ -324,7 +324,7 @@
                            Максимум от выходных...
                         </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>Под Заказ</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>25-26 Сентября</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li>
                         </ul>
                     </div>
