--- a/page-Hortica.html
+++ b/page-Hortica.html
@@ -99,7 +99,7 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>8 Мая 2021 Года</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>05 Сентября</span>
                                 </li>
                             </ul>
                         </div>
