--- a/page-Svyatogorsk-and-Soledar.html
+++ b/page-Svyatogorsk-and-Soledar.html
@@ -121,7 +121,7 @@
                                 <li>
                                     <!-- Дата -->
                                     <span class="fa fa-calendar mr-2"></span>Дата: <span class="dateOfTravel">
-                                        26 - 27 Июня 2021 Года
+                                       09 - 10 Октября
                                     </span>
                                     <!-- //Дата -->
                                 </li>
