--- a/page-Zaporizhzhia-on-Dnieper.html
+++ b/page-Zaporizhzhia-on-Dnieper.html
@@ -102,8 +102,7 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>30 Мая 2021
-                                        Года</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>19 Сентября</span>
                                 </li>
                             </ul>
                         </div>
