--- a/packages.html
+++ b/packages.html
@@ -274,7 +274,7 @@
                         </h5>
                         <p class="">Тайны и загадки родного острова Хортица... </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>08 Мая 2021 Года</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>05 Сентября </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
@@ -297,7 +297,7 @@
                         </h5>
                         <p class="">Экскурсия в Запорожье на Днепре...</p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>30 Мая 2021 Год</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>19 Сентября </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
@@ -346,7 +346,7 @@
                         </h5>
                         <p class="">Там очень Круто и необычно!</p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>26 - 27 Июня</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>09 - 10 Октября</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li>
                         </ul>
                     </div>
