--- a/Excursion-Schedule.html
+++ b/Excursion-Schedule.html
@@ -90,7 +90,7 @@
                        <h3 class="heading text-capitalize text-center">Расписание экскурсий</h3>
                       <p class="text mt-2 mb-5 text-center"> Туры выходного дня "Новый Поворот" </p>
                
-                      <div class="row">
+                      <div class="col">
 
                             <table class="table table-hover table-bordered">
                               <thead class="thead-dark">
