--- a/packages.html
+++ b/packages.html
@@ -122,7 +122,7 @@
                             Трогательный зоопарк и яхтклуб...
                         </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 01 Августа 2021 Года </span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 01 Августа </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
@@ -149,7 +149,7 @@
                             Экскурсия львы и лошади...
                         </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 07 Августа 2021 Года </span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 07 Августа </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
@@ -200,7 +200,7 @@
                             Животные Аскании ждут гостей...
                         </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 23 - 24 Августа 2021 Года </span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 23 - 24 Августа </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li>
                         </ul>
                     </div>
