--- a/booking.html
+++ b/booking.html
@@ -169,6 +169,10 @@
                                 <button class="col-md-6 btn btn-block sent-butnn">Забронировать Сейчас</button>
                             </div>
                         </form>
+                        <hr>
+                        <p  class="text-center">
+                            <a href="https://novipovorot.pp.ua/Excursion-Schedule.html">Расписание Экскурсий</a>
+                        </p>
                     </div>
                 </div>
             </div>
