--- a/booking.html
+++ b/booking.html
@@ -171,7 +171,7 @@
                         </form>
                         <hr>
                         <p  class="text-center">
-                            <a href="https://novipovorot.pp.ua/Excursion-Schedule.html">Расписание Экскурсий</a>
+                            Посмотреть <a href="https://novipovorot.pp.ua/Excursion-Schedule.html">Расписание Экскурсий</a>
                         </p>
                     </div>
                 </div>
