--- a/booking.html
+++ b/booking.html
@@ -174,7 +174,7 @@
             </div>
             <hr>
             <p  class="text-center">
-                Посмотреть <a href="https://novipovorot.pp.ua/Excursion-Schedule.html">Расписание Экскурсий</a>
+                Посмотреть <a href="https://novipovorot.pp.ua/Excursion-Schedule.html">Расписание Экскурсий</a> туров выходного дня 'Новый Поворот'
             </p>
             
         </div>
