--- a/booking.html
+++ b/booking.html
@@ -173,8 +173,8 @@
                 </div>
             </div>
             <hr>
-            <p  class="text-center">
-                Посмотреть <a href="https://novipovorot.pp.ua/Excursion-Schedule.html">Расписание Экскурсий</a> туров выходного дня 'Новый Поворот'
+            <p  class="text-left">
+                *Посмотреть <a href="https://novipovorot.pp.ua/Excursion-Schedule.html">Расписание Экскурсий</a> туров выходного дня 'Новый Поворот'
             </p>
             
         </div>
