--- a/booking.html
+++ b/booking.html
@@ -39,7 +39,12 @@
         href="//fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
     <!-- //google fonts -->
-
+ 
+    <style>
+        .txt-uline {
+                text-decoration: underline;
+        }
+     </style>
 </head>
 
 <body>
@@ -174,7 +179,7 @@
             </div>
             <hr>
             <p  class="text-left">
-                *Посмотреть <a href="https://novipovorot.pp.ua/Excursion-Schedule.html">Расписание Экскурсий</a> туров выходного дня 'Новый Поворот'
+                *Посмотреть <a class="txt-uline" href="https://novipovorot.pp.ua/Excursion-Schedule.html">Расписание Экскурсий</a> туров выходного дня 'Новый Поворот'
             </p>
             
         </div>
