--- a/booking.html
+++ b/booking.html
@@ -179,7 +179,7 @@
             </div>
             <hr>
             <p  class="text-left">
-                *Посмотреть <a class="txt-uline" href="https://novipovorot.pp.ua/Excursion-Schedule.html">Расписание Экскурсий</a> туров выходного дня 'Новый Поворот'
+                *Посмотреть <a class="txt-uline" href="https://novipovorot.pp.ua/Excursion-Schedule.html">Расписание экскурсий</a> - туров выходного дня 'Новый Поворот'
             </p>
             
         </div>
