--- a/booking.html
+++ b/booking.html
@@ -41,7 +41,10 @@
     <!-- //google fonts -->
  
     <style>
-        .txt-uline {
+        /*.txt-uline {
+                text-decoration: underline;
+        }*/
+        .txt-uline:hover {
                 text-decoration: underline;
         }
      </style>
