--- a/booking.html
+++ b/booking.html
@@ -181,7 +181,7 @@
                 </div>
             </div>
             <br><hr>
-            <p  class="text-left">
+            <p  class="text-left font-italic">
                 *Посмотреть <a class="txt-uline" href="https://novipovorot.pp.ua/Excursion-Schedule.html">Расписание экскурсий</a> - туров выходного дня 'Новый Поворот'
             </p>
             
