--- a/page-Vilkovo-Oysters-Shabo.html
+++ b/page-Vilkovo-Oysters-Shabo.html
@@ -133,7 +133,7 @@
                         </p>
 			<p class="p-2 txt-alg-jf bg-light">
 			  ТАКОГО ВЫ ЕЩЕ НЕ ВИДЕЛИ! БРОНИРУЙТЕ УЖЕ СЕЙЧАС! МЕСТА ОГРАНИЧЕНЫ! КТО БУДЕТ ДОЛГО ДУМАТЬ СИДИТ ДОМА И ЗАВИДУЕТ МОЛЧА 
-			<img src=".images/Emoji/1f600.png" alt="emoji" height="20px">
+			<img src="./images/Emoji/1f600.png" alt="emoji" height="20px">
 			</p>
                         <p class="txt-alg-jf">
 		             Бывали у настоящих пчеловодов <span id="honeyExcursion">на медовой экскурсии</span>?!
