--- a/page-Vilkovo-Oysters-Shabo.html
+++ b/page-Vilkovo-Oysters-Shabo.html
@@ -180,7 +180,7 @@
                             </span>
 			    <hr>
                             <span class="txt-alg-jf">
-                                <i>Предоплата по брони 50% от стоимости.</i> 
+                                <i>*Предоплата по брони 50% от стоимости.</i> 
                             </span>
                         </div>
                         <!-- //Alert info -->
