--- a/contact.html
+++ b/contact.html
@@ -184,6 +184,10 @@
                         <h5 class="mt-lg-5 mt-3">Рабочие часы</h5>
                         <p class="mt-3">С понедельника по пятницу: с 09:00 до 19:00.</p>
                         <p>Суббота и воскресенье: с 09:00 до 16:00.</p>
+                        <hr>
+                        <p  class="text-left font-italic">
+                            *Посмотреть <a class="txt-uline font-weight-bold" href="https://novipovorot.pp.ua/Excursion-Schedule.html">Расписание экскурсий</a>
+                        </p>
                     </div>
                 </div>
             </div>
