--- a/contact.html
+++ b/contact.html
@@ -40,6 +40,11 @@
         rel="stylesheet">
     <!-- //google fonts -->
 
+     <style>
+        .txt-uline:hover {
+                text-decoration: underline;
+        }
+     </style>
 </head>
 
 <body>
