--- a/booking.html
+++ b/booking.html
@@ -179,7 +179,7 @@
             </div>
             <br><hr>
             <p  class="text-left font-italic">
-                *Посмотреть <a class="txt-uline font-weight-bold" href="https://novipovorot.pp.ua/Excursion-Schedule.html">Расписание экскурсий</a> - туров выходного дня 'Новый Поворот'
+                *Посмотреть <a class="txt-uline font-weight-bold" href="https://novipovorot.pp.ua/Excursion-Schedule.html">>расписание экскурсий</a> - туров выходного дня 'Новый Поворот'
             </p>
             
         </div>
