--- a/contact.html
+++ b/contact.html
@@ -191,7 +191,7 @@
                         <p>Суббота и воскресенье: с 09:00 до 16:00.</p>
                         <hr>
                         <p  class="text-left font-italic">
-                            *Посмотреть <a class="txt-uline font-weight-bold" href="https://novipovorot.pp.ua/Excursion-Schedule.html">>расписание экскурсий</a>
+                            *Посмотреть <a class="txt-uline font-weight-bold" href="https://novipovorot.pp.ua/Excursion-Schedule.html"><span class="fa fa-angle-right"></span> расписание экскурсий</a>
                         </p>
                     </div>
                 </div>
