--- a/contact.html
+++ b/contact.html
@@ -190,8 +190,8 @@
                         <p class="mt-3">С понедельника по пятницу: с 09:00 до 19:00.</p>
                         <p>Суббота и воскресенье: с 09:00 до 16:00.</p>
                         <hr>
-                        <p  class="text-left font-italic">
-                            *Посмотреть <a class="txt-uline font-weight-bold" href="https://novipovorot.pp.ua/Excursion-Schedule.html"><span class="fa fa-angle-right"></span> расписание экскурсий</a>
+                        <p  class="text-left">
+                            *Посмотреть <a class="txt-uline" href="https://novipovorot.pp.ua/Excursion-Schedule.html">расписание экскурсий</a>
                         </p>
                     </div>
                 </div>
