--- a/booking.html
+++ b/booking.html
@@ -178,8 +178,8 @@
                 </div>
             </div>
             <br><hr>
-            <p  class="text-left font-italic">
-                *Посмотреть <a class="txt-uline font-weight-bold" href="https://novipovorot.pp.ua/Excursion-Schedule.html"><span class="fa fa-angle-right"></span> расписание экскурсий</a> - туров выходного дня 'Новый Поворот'
+            <p  class="text-left">
+                *Посмотреть <a class="txt-uline" href="https://novipovorot.pp.ua/Excursion-Schedule.html">расписание экскурсий</a> - туров выходного дня 'Новый Поворот'
             </p>
             
         </div>
