--- a/page-Vilkovo-Oysters-Shabo.html
+++ b/page-Vilkovo-Oysters-Shabo.html
@@ -245,11 +245,13 @@
                             </li>
                         </ul>
                         </p>
-                        
+                        <p>
+			    Посмотреть <a class="txt-uline" href="https://novipovorot.pp.ua/Excursion-Schedule.html">расписание экскурсий...</a>
+			</p>
+			
                        <!-- 
-				            Описание экскурсии 
-			 -->
-
+			   Описание экскурсии 
+			-->
                         <div class="accordion mt-3 mb-3" id="accordionExample">
                             <div class="card">
                                 <div class="card-header" id="headingOne">
