--- a/page-Vilkovo-Oysters-Shabo.html
+++ b/page-Vilkovo-Oysters-Shabo.html
@@ -190,7 +190,7 @@
                             <li><span class="fa fa-tags mr-2"></span> Стоимость: <span> 2975 Грн.</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span> Продолжительность: <span>2 Дня</span></li>
 			    <li><span class="fa fa-eye mr-2"></span> Посмотреть: 
-				    <a class="txt-uline" href="https://novipovorot.pp.ua/Excursion-Schedule.html">Расписание Экскурсий</li>
+				    <a class="txt-uline" href="https://novipovorot.pp.ua/Excursion-Schedule.html">Расписание Экскурсий</a></li>
                             <!-- //Цена и Дата -->
                         </ul>
                         <br>
