--- a/page-Vilkovo-Oysters-Shabo.html
+++ b/page-Vilkovo-Oysters-Shabo.html
@@ -111,7 +111,7 @@
                             <ul class="listing mt-3">
                                 <li>
                                     <!-- Дата -->
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>08 Августа</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>11 - 12 Сентября</span>
                                     <!-- //Дата -->
                                 </li>
                             </ul>
