--- a/page-Vilkovo-Oysters-Shabo.html
+++ b/page-Vilkovo-Oysters-Shabo.html
@@ -281,7 +281,7 @@
 					   На обратной дороге заезжаем покушать в кафе «Старый город» на острова,
 						где готовят удивительные блюда: 
 				        </p>
-					    <ul class="list-group">
+					    <ul class="list-group listing"> 
 						  <li class="list-group-item d-flex justify-content-between align-items-center">
 						    <i class="fa fa-cutlery" aria-hidden="true"></i> Осетрина или стерлядь жаренная (русская печь)
 						    <span class="badge badge-primary badge-pill">140 грн./100 г.</span>
