--- a/page-Vilkovo-Oysters-Shabo.html
+++ b/page-Vilkovo-Oysters-Shabo.html
@@ -283,15 +283,24 @@
 				        </p>
 					    <ul class="list-group listing"> 
 						  <li class="list-group-item d-flex justify-content-between align-items-center">
-						    <i class="fa fa-cutlery" aria-hidden="true"></i> Осетрина или стерлядь жаренная (русская печь)
+						    <span>
+							    <span class="fa fa-cutlery" aria-hidden="true"></span>
+							    Осетрина или стерлядь жаренная (русская печь)
+					            </span>
 						    <span class="badge badge-primary badge-pill">140 грн./100 г.</span>
 						  </li>
 						  <li class="list-group-item d-flex justify-content-between align-items-center">
-						    <i class="fa fa-cutlery" aria-hidden="true"></i> Жаренные лягушачьи лапки
+						     <span>
+						            <span class="fa fa-cutlery" aria-hidden="true"></span>
+							     Жаренные лягушачьи лапки
+						     </span>
 						    <span class="badge badge-primary badge-pill">150 грн./150 г.</span>
 						  </li>
 						  <li class="list-group-item d-flex justify-content-between align-items-center">
-						    <i class="fa fa-cutlery" aria-hidden="true"></i> Уха стерлядь или осетрина или севрюга
+						   <span>
+						          <span class="fa fa-cutlery" aria-hidden="true"></span>
+							   Уха стерлядь или осетрина или севрюга
+						   </span>
 						    <span class="badge badge-primary badge-pill">350 грн./400 г.</span>
 						  </li>
 					    </ul>
