--- a/page-Vilkovo-Oysters-Shabo.html
+++ b/page-Vilkovo-Oysters-Shabo.html
@@ -272,7 +272,7 @@
                                             Украинская Венеция Вилково.
 					    Город на воде! Крутое путешествие на катере вдоль островов 
 					    и Дунайского биосферного заповедника к Краю земли 0 КМ!
-					    <span class="bg-dark text-white">Место Zero</span> где энергия
+					    <span class="bg-danger text-white">Место Zero</span> где энергия
 					    <img src="images/Emoji/9889.png" alt="TV" height="20px">
 						начала и конца. 
 					    Впадания реки в море! 
