--- a/page-Vilkovo-Oysters-Shabo.html
+++ b/page-Vilkovo-Oysters-Shabo.html
@@ -44,7 +44,9 @@
         href="//fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
     <!-- //google fonts -->
-	
+	<style>
+		.txt-idnt-0 {text-indent: none;}
+	</style>
 </head>
   <body>
 
@@ -281,25 +283,25 @@
 					   На обратной дороге заезжаем покушать в кафе «Старый город» на острова,
 						где готовят удивительные блюда: 
 				        </p>
-					    <ul class="list-group listing"> 
+					    <ul class="list-group listing txt-idnt-0"> 
 						  <li class="list-group-item d-flex justify-content-between align-items-center">
 						    <span>
 							    <span class="fa fa-cutlery" aria-hidden="true"></span>
-							    Осетрина или стерлядь жаренная (русская печь)
+							    &nbsp; Осетрина или стерлядь жаренная (русская печь)
 					            </span>
 						    <span class="badge badge-primary badge-pill">140 грн./100 г.</span>
 						  </li>
 						  <li class="list-group-item d-flex justify-content-between align-items-center">
 						     <span>
 						            <span class="fa fa-cutlery" aria-hidden="true"></span>
-							     Жаренные лягушачьи лапки
+							     &nbsp; Жаренные лягушачьи лапки
 						     </span>
 						    <span class="badge badge-primary badge-pill">150 грн./150 г.</span>
 						  </li>
 						  <li class="list-group-item d-flex justify-content-between align-items-center">
 						   <span>
 						          <span class="fa fa-cutlery" aria-hidden="true"></span>
-							   Уха стерлядь или осетрина или севрюга
+							   &nbsp; Уха стерлядь или осетрина или севрюга
 						   </span>
 						    <span class="badge badge-primary badge-pill">350 грн./400 г.</span>
 						  </li>
