--- a/page-Vilkovo-Oysters-Shabo.html
+++ b/page-Vilkovo-Oysters-Shabo.html
@@ -45,7 +45,7 @@
         rel="stylesheet">
     <!-- //google fonts -->
 	<style>
-		.txt-idnt-0 {text-indent: none;}
+		.txt-idnt-0 {text-indent: 0px;}
 	</style>
 </head>
   <body>
