--- a/page-Vilkovo-Oysters-Shabo.html
+++ b/page-Vilkovo-Oysters-Shabo.html
@@ -263,7 +263,7 @@
 					    <img src="/images/Emoji/1f603.png" alt="" height="20px">
 					    Едем на комфортабельном транспорте туристического класса (раскладные сидения), TV
 					    <img src="images/Emoji/tv.png" alt="TV" height="20px">
-                                            Заберем Вас Автовокзал-Советская -Фестивальная-Металлургов вокзал (уточняйте при бронировании)
+                                            Заберем Вас: Автовокзал - Советская - Фестивальная - Металлургов (уточняйте при бронировании).
                                         </p>
 					  <hr>  
                                        <h5>11 Сентября</h5>
