--- a/page-Vilkovo-Oysters-Shabo.html
+++ b/page-Vilkovo-Oysters-Shabo.html
@@ -48,14 +48,15 @@
 		.txt-idnt-0 {text-indent: 0px;}
 		.highlight {	
 			background-color: #f7f7f9;
-			padding: 1.25rem;
-			margin-top: 1.25rem;
-			margin-bottom: 1.25rem;
-			border: 1px solid #eee;
-			border-left-width: .25rem;
-			border-radius: .25rem;
-			border-left-color: #5bc0de;
-		}
+		        padding: .5rem;
+		        margin-top: 1rem;
+		        margin-bottom: 1rem;
+		        border: 1px solid #eee;
+		        border-left-width: .25rem;
+		        border-radius: .25rem;
+		        border-left-color: #5bc0de;
+		        text-indent: 0px;
+	      }
 	</style>
 </head>
   <body>
