--- a/page-Vilkovo-Oysters-Shabo.html
+++ b/page-Vilkovo-Oysters-Shabo.html
@@ -181,8 +181,8 @@
                             </span>
 			    <hr>
 			    <span class="txt-alg-jf">
-                                Цена билета C <strong>28  августа*: </strong>  <u>  3350 грн.</u>,  от 7 до 10 лет - <u> 3320   грн.</u>
-				    (при условии что будут места на тур)
+                                Цена билета C <strong>28  августа*: </strong>  <u>  3350 грн.</u>,  от 7 до 10 лет - <u> 3320 грн.</u>
+				    (при условии что будут места)
 				    <img src="./images/Emoji/1f609.png" alt="emoji" height="20px">
                             </span>
 			    <hr>
