--- a/page-Vilkovo-Oysters-Shabo.html
+++ b/page-Vilkovo-Oysters-Shabo.html
@@ -376,7 +376,7 @@
 					 </p>
 				
 					<!-- Alert info -->
-					<div class="alert alert-info mt-3 ">
+					<div class="alert alert-info mt-3 txt-idnt-0">
 					    <button type="button" class="close" data-dismiss="alert">&times;</button>
 
 					    <span  class="fa fa-info-circle"></span><strong> Информируем</strong>
@@ -391,7 +391,7 @@
 					    </span>
 					    <hr>
 					    <span class="txt-alg-jf">
-						<i>*ПО ЦЕНТРУ КУЛЬТУРЫ ВИНА SHABO  (по-желанию).</i> 
+						<i>*По центру культуры вина SHABO (по-желанию).</i> 
 					    </span>
 					</div>
 					<!-- //Alert info -->
