--- a/page-Vilkovo-Oysters-Shabo.html
+++ b/page-Vilkovo-Oysters-Shabo.html
@@ -379,13 +379,13 @@
 					<div class="alert alert-info mt-3 txt-idnt-0">
 					    <button type="button" class="close" data-dismiss="alert">&times;</button>
 
-					    <span  class="fa fa-info-circle"></span><strong> Информируем</strong>
+					    <!--<span  class="fa fa-info-circle"></span><strong> Информируем</strong>
 					    <br />
-					    <br />
+					    <br />-->
 					    <span class="txt-alg-jf">
 						<strong>Экскурсия Стандарт (1 час 30 мин.): </strong>  <u> 280 грн./чел.</u>;
 					    </span>
-					    <hr>
+					    <br />
 					    <span class="txt-alg-jf">
 						<strong>Стандарт с дегустацией (2 часа 30 мин.): </strong>  <u> 360 грн./чел.</u>;
 					    </span>
