--- a/page-Vilkovo-Oysters-Shabo.html
+++ b/page-Vilkovo-Oysters-Shabo.html
@@ -292,7 +292,7 @@
                                         </p>
 					<p>
 					   На обратной дороге заезжаем покушать в кафе «Старый город» на острова,
-						где готовят удивительные блюда: 
+						где готовят <span class="text-danger">удивительные блюда: </span>
 				        </p>
 					    <ul class="list-group listing txt-idnt-0"> 
 						  <li class="list-group-item d-flex justify-content-between align-items-center">
@@ -355,7 +355,7 @@
 					     с супер-крутыми сомелье и огромнейшее производство!	
 					</p>  
 					<p>
-                                        	<u>Мы увидим 4 локации:</u><br>
+                                        	<u class="text-danger">Мы увидим 4 локации:</u><br>
 						- Винный дом SHABO 
 						(знакомство с производством тихих вин от отделения переработки винограда, 
 						до отделения выдержки);<br>
@@ -366,7 +366,7 @@
 					</p>
 					<br />
 					<p>
-						<u>Продегустируем 6 видов продукции SHABO:</u><br>
+						<u class="text-danger">Продегустируем 6 видов продукции SHABO:</u><br>
 						- Шардоне, сухое белое;<br>
 						- Тельти-Курук, сухое белое;<br>
 						- Каберне, сухое красное;<br>
@@ -402,7 +402,7 @@
 					   На обратной дороге заезжаем покушать в кафе «Старый город» на острова,
 						где готовят удивительные блюда: 
 				         </p>
-					 <p>
+					 <p class="text-danger">
 					    На выбор :
 					  </p>
 					    <ul class="list-group listing txt-idnt-0"> 
