--- a/page-Vilkovo-Oysters-Shabo.html
+++ b/page-Vilkovo-Oysters-Shabo.html
@@ -288,7 +288,8 @@
 					    <span class="bg-danger text-white">Место Zero</span> где энергия
 					    <img src="images/Emoji/9889.png" alt="smile" height="20px">
 						начала и конца. 
-					    Впадания реки в море! 
+					    Впадания реки в море
+					  <img src="images/Emoji/127754.png" alt="sea" height="20px">
                                         </p>
 					<p>
 					   На обратной дороге заезжаем покушать в кафе «Старый город» на острова,
