--- a/page-Vilkovo-Oysters-Shabo.html
+++ b/page-Vilkovo-Oysters-Shabo.html
@@ -373,7 +373,7 @@
 							Tik Tok 
 						</a>,	
 						<!-- Facebook -->
-						<a  title="Facebook"  href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fnovipovorot.pp.ua/page-Yacht-club-and-Aquazoo.html" target="_blank" rel="noopener">
+						<a  title="Facebook"  href="https://www.facebook.com/sharer/sharer.php?u=https://novipovorot.pp.ua/page-Vilkovo-Oysters-Shabo.html" target="_blank" rel="noopener">
 							<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="25" height="25"
 							     viewBox="0 0 36 36" enable-background="new 0 0 36 36" xml:space="preserve">  <image id="image0" width="36" height="36" x="0" y="0"
 							    xlink:href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACQAAAAkCAMAAADW3miqAAAABGdBTUEAALGPC/xhBQAAACBjSFJN
@@ -389,7 +389,7 @@
 							</svg>
 						</a>
 						<!-- //Facebook -->
-						<a title="Facebook" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fnovipovorot.pp.ua/page-Yacht-club-and-Aquazoo.html" target="_blank" rel="noopener">
+						<a title="Facebook" href="https://www.facebook.com/sharer/sharer.php?u=https://novipovorot.pp.ua/page-Vilkovo-Oysters-Shabo.html" target="_blank" rel="noopener">
 						   Facebook
 						</a>, 
 						<!-- Telegram -->
@@ -491,13 +491,13 @@
 							aC8yMTA4L3RlbGVncmFtX2ljb25fMTMwODE2LnBuZ3z1beQAAAAASUVORK5CYII=" />
 							</svg>
 						</a>
-						<a  title="Telegram"  href="https://t.me/share/url?url=https://novipovorot.pp.ua/page-Yacht-club-and-Aquazoo.html" target="_blank" >
+						<a  title="Telegram"  href="https://t.me/share/url?url=https://novipovorot.pp.ua/page-Vilkovo-Oysters-Shabo.html" target="_blank" >
 						    Telegram
 						</a>,
 						<!-- //Telegram -->
 						
 						<!-- Twitter -->
-						<a  title="Twitter"  href="https://twitter.com/intent/tweet?url=https://novipovorot.pp.ua/page-Yacht-club-and-Aquazoo.html" target="_blank" >
+						<a  title="Twitter"  href="https://twitter.com/intent/tweet?url=https://novipovorot.pp.ua/page-Vilkovo-Oysters-Shabo.html" target="_blank" >
 							<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="25" 
 							     height="25" viewBox="0 0 169 168" enable-background="new 0 0 169 168" xml:space="preserve">  
 								<image id="image0" width="169" height="168" x="0" y="0"
@@ -584,12 +584,12 @@
 							</svg>
 
 						</a>	
-						<a  title="Twitter"  href="https://twitter.com/intent/tweet?url=https://novipovorot.pp.ua/page-Yacht-club-and-Aquazoo.html" target="_blank" >
+						<a  title="Twitter"  href="https://twitter.com/intent/tweet?url=https://novipovorot.pp.ua/page-Vilkovo-Oysters-Shabo.html" target="_blank" >
 						   Twitter
 						</a>,
 						<!-- //Twitter -->
 						<!-- Viber -->
-						<a  title="Viber"  href="viber://forward?text=https://novipovorot.pp.ua/page-Yacht-club-and-Aquazoo.html" target="_blank" > 
+						<a  title="Viber"  href="viber://forward?text=https://novipovorot.pp.ua/page-Vilkovo-Oysters-Shabo.html" target="_blank" > 
 						    <img src="images/viber.jpg" alt="viber"  height="25px" style="margin-top:-17px;">
 						</a>
 						<a  title="Viber"  href="viber://forward?text=https://novipovorot.pp.ua/page-Yacht-club-and-Aquazoo.html" target="_blank" > 
@@ -597,10 +597,10 @@
 						</a>,
 						<!-- //Viber -->
 						<!-- VK -->
-						    <a href="https://vk.com/share.php?url=https://novipovorot.pp.ua/page-Yacht-club-and-Aquazoo.html"  target="_blank">
+						    <a href="https://vk.com/share.php?url=https://novipovorot.pp.ua/page-Vilkovo-Oysters-Shabo.html"  target="_blank">
 							 <img src="images/vk.jpg" alt="vk"  height="25px" style="margin-top:-17px;"> 
 						    </a>
-						    <a href="https://vk.com/share.php?url=https://novipovorot.pp.ua/page-Yacht-club-and-Aquazoo.html"  target="_blank">
+						    <a href="https://vk.com/share.php?url=https://novipovorot.pp.ua/page-Vilkovo-Oysters-Shabo.html"  target="_blank">
 							VK    
 						    </a>
 						<!-- //VK -->
