--- a/page-Vilkovo-Oysters-Shabo.html
+++ b/page-Vilkovo-Oysters-Shabo.html
@@ -897,22 +897,19 @@
                                   (от количества людей в группе, места в транспорте по датам оплат, раньше заплатил, ближе сидишь)
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    экскурсия по Сырной ферме;
+                                    транспорт тур.класса с раскладными сиденьями, ТВ, кондиционер;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                   дегустация 7 видов сыра, молоко, йогурт;
+                                   самая увлекательная прогулка на катере Украинская Венеция и Край земли 0 км;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    экскурсия по Пасеке;
+                                    1 ночь в гостинице у моря 2-3 местные номера с удобствами в номере Одесская область (если Вас 2е селим в 2х местный и не подселяем;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    дегустация 4 вида меда;
+                                   Супер позитивное сопровождение представителя нашей компании;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    сопровождение представителя нашей компании;
-                                </li>
-                                <li class="list-group-item list-group-item-success ">
-                                    магнит от Нового поворота, самое замечательное настроение.
+                                    Магнит от Нового поворота, самое замечательное настроение.
                                 </li>
                             </ul>
                         </div>
@@ -920,7 +917,16 @@
                             <h5 class="alert-heading">В стоимость не входит:</h5>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item list-group-item-danger ">
-                                    Индивидуальная покупка сыра от 45 до 60 грн /100 г от вида и йогурта.
+                                    Питание в дороге, (мы покажем самые крутые места, но оплатить прийдется Вам;
+                                </li>
+				<li class="list-group-item list-group-item-danger ">
+                                    ПО ЦЕНТРУ КУЛЬТУРЫ ВИНА SHABO  (по-желанию): 
+					Экскурсия Стандарт (1 час 30 мин.) — 280 грн/чел; Стандарт с дегустацией (2 часа 30 мин.) — 360 грн/чел;
+                                </li>
+				<li class="list-group-item list-group-item-danger ">
+                                    Экскурсии Устрицы Скифии (по-желанию): - 120грн; с дегустацией 300 грн./чел. входит - 
+					3 устрицы, 1 бокал вина и экскурсия;
+					460 грн./чел. входит - 6 устриц, 2 бокала вина и экскурсия.
                                 </li>
                             </ul>
                         </div>
