--- a/page-Vilkovo-Oysters-Shabo.html
+++ b/page-Vilkovo-Oysters-Shabo.html
@@ -837,12 +837,17 @@
                                 </li>
 				<li class="list-group-item list-group-item-danger ">
                                     ПО ЦЕНТРУ КУЛЬТУРЫ ВИНА SHABO  (по-желанию): 
-					Экскурсия Стандарт (1 час 30 мин.) — 280 грн/чел; Стандарт с дегустацией (2 часа 30 мин.) — 360 грн/чел;
+					Экскурсия Стандарт (1 час 30 мин.) — 
+					<span class="badge rounded-pill bg-danger text-white">280 грн./чел.</span> Стандарт с дегустацией (2 часа 30 мин.) — 
+					<span class="badge rounded-pill bg-danger text-white">360 грн./чел.</span>
                                 </li>
 				<li class="list-group-item list-group-item-danger ">
-                                    Экскурсии Устрицы Скифии (по-желанию): - 120грн; с дегустацией 300 грн./чел. входит - 
+                                    Экскурсии Устрицы Скифии (по-желанию): - 
+					<span class="badge rounded-pill bg-danger text-white">120 грн.</span> с дегустацией 
+					<span class="badge rounded-pill bg-danger text-white">300 грн./чел.</span> входит - 
 					3 устрицы, 1 бокал вина и экскурсия;
-					460 грн./чел. входит - 6 устриц, 2 бокала вина и экскурсия.
+					<span class="badge rounded-pill bg-danger text-white">460 грн./чел.</span>
+					входит - 6 устриц, 2 бокала вина и экскурсия.
                                 </li>
                             </ul>
                         </div>
