--- a/page-Vilkovo-Oysters-Shabo.html
+++ b/page-Vilkovo-Oysters-Shabo.html
@@ -737,7 +737,7 @@
                               <div class="card">
                                 <div class="card-image"> <a data-fancybox="gallery" data-caption="Вилково, Устрицы И Шабо #2" data-fancybox="gallery"
                                     href="/images/Vilkovo-Oysters-Shabo/gallery-Vilkovo-Oysters-Shabo-2.jpg">
-                                    <img src="/images/Vilkovo-Oysters-Shabo/gallery-Vilkovo-Oysters-Shabo-2.jpgg"></a>
+                                    <img src="/images/Vilkovo-Oysters-Shabo/gallery-Vilkovo-Oysters-Shabo-2.jpg"></a>
                                 </div>
                               </div>
 
