--- a/page-Vilkovo-Oysters-Shabo.html
+++ b/page-Vilkovo-Oysters-Shabo.html
@@ -684,13 +684,13 @@
 					    <ul class="list-group listing txt-idnt-0"> 
 						  <li class="list-group-item d-flex justify-content-between align-items-center">
 						    <span>
-							    Экскурсии Устрицы Скифии (по-желанию)
+							    Экскурсии Устрицы Скифии  <span class="font-italic">(по-желанию)</span>
 					            </span>
 						    <span class="badge badge-primary badge-pill">120 грн.</span>
 						  </li>
 						  <li class="list-group-item d-flex justify-content-between align-items-center">
 						     <span>
-						            Экскурсия с дегустацией 1 бокал вина (входит - 3 устрицы)
+						            Экскурсия с дегустацией 1 бокал вина  <span class="font-italic">(входит - 3 устрицы)</span>
 						     </span>
 						    <span class="badge badge-primary badge-pill">300 грн./чел. </span>
 						  </li>
