--- a/page-Vilkovo-Oysters-Shabo.html
+++ b/page-Vilkovo-Oysters-Shabo.html
@@ -148,19 +148,13 @@
 			  ТАКОГО ВЫ ЕЩЕ НЕ ВИДЕЛИ! БРОНИРУЙТЕ УЖЕ СЕЙЧАС! МЕСТА ОГРАНИЧЕНЫ! КТО БУДЕТ ДОЛГО ДУМАТЬ СИДИТ ДОМА И ЗАВИДУЕТ МОЛЧА 
 			<img src="./images/Emoji/1f600.png" alt="emoji" height="20px">
 			</p>
-			    
-                        <div id="MoreDetails" style="display: none;">
-                         <p class="p-2 txt-alg-jf bg-light">
-                            Ждем Вас, Ваших родных, близких и друзей на экскурсию! Собери компанию 16 человек, 17 едет бесплатно 
+                        <p class="p-2 txt-alg-jf bg-light">
+                            Ждем Вас, Ваших родных, близких и друзей на 
+				<span id="ExcursionFromZaporozhye">экскурсию из Запорожья</span>! 
+				Собери компанию 16 человек, 17 едет бесплатно 
 			    <img src="./images/Emoji/1f609.png" alt="emoji" height="20px">
-                         </p>
-                       </div>
-                       <p id="MoreDetailsHide" onclick="document.getElementById('MoreDetails').style.display='block'; document.getElementById('MoreDetailsHide').style.display='none'"
-                           class="text-primary font-weight-bold txt-alg-jf"  style="cursor: pointer;">
-                          ПОДРОБНЕЕ...
-                       </p>
+                        </p>
                         <hr>
-                       
                         <!-- Alert info -->
                         <div class="alert alert-info mt-3 ">
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
@@ -706,7 +700,7 @@
 						    Почему так, зависит от длительности стоянок, 
 						    иногда сложно всем собраться после хорошего отдыха и дороги. 
 						    Мы не знаем насколько будет загружена трасса в день возврата.
-						    Прибываем в Запорожье высаживаем от Каховской 
+						    Прибываем в <span id="Zaporozhye">Запорожье</span> высаживаем от Каховской 
 						    и дальше по проспекту до Автовокзала. 
 						    Возвращаемся полностью отдохнувшими в потрясающем настроении, 
 						    с морем впечатлений и крутыми фото!
@@ -892,9 +886,9 @@
 			<span class="badge rounded-pill bg-secondary"> <a onclick="selectText('Zaporozhye')"
 					class="text-white" title="Запорожье" href="#Zaporozhye" rel="tag">Запорожье</a></span>
 
-			<span class="badge rounded-pill bg-secondary"> <a onclick="selectText('ExcursionToZaporozhye')"
-					class="text-white" title="Экскурсия в Запорожье" href="#ExcursionToZaporozhye">Экскурсия
-					в Запорожье</a></span>
+			<span class="badge rounded-pill bg-secondary"> <a onclick="selectText('ExcursionFromZaporozhye')"
+					class="text-white" title="Экскурсия из Запорожья" href="#ExcursionFromZaporozhye">Экскурсия из Запорожья
+				</a></span>
 
 			<span class="badge rounded-pill bg-secondary"> <a onclick="selectText('logo')"
 					class="text-white" title="Новый Поворот Запорожье" href="#logo" rel="tag">Новый Поворот
@@ -910,7 +904,7 @@
 				</a></span>
 
 			<span class="badge rounded-pill bg-secondary"> <a onclick="selectText('сheeseFarm')"
-					class="text-white" title="Сырная Ферма Запорожье" href="#сheeseFarm" rel="tag">Сырная Ферма Запорожье
+					class="text-white" title="Сырная Ферма Запорожье" href="#сheeseFarm" rel="tag">Вилково, Устрицы И Шабо
 				</a></span>	
 
 		       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('apiary')"
