--- a/page-Vilkovo-Oysters-Shabo.html
+++ b/page-Vilkovo-Oysters-Shabo.html
@@ -140,7 +140,7 @@
                         <p class="txt-alg-jf">
                             Домики на воде, вокруг не одного авто лишь лодки и катера! 
 			    Удивительно и романтично! Край Земли - 0 километр!
-			    Магическое место слияния всех вод!                                                      
+				Магическое место для <span id="travels">путешествия</span>, слияния всех вод!                                                      
 			    Вкуснейшие устрицы и самые крутые вина!
 			    Ласковое бархатное море и самые незабываемые приключения ждут Вас! 
                         </p>
