--- a/page-Vilkovo-Oysters-Shabo.html
+++ b/page-Vilkovo-Oysters-Shabo.html
@@ -145,7 +145,7 @@
 			    Ласковое бархатное море и самые незабываемые приключения ждут Вас! 
                         </p>
 			<p class="p-2 txt-alg-jf bg-light">
-			  ТАКОГО ВЫ ЕЩЕ НЕ ВИДЕЛИ! БРОНИРУЙТЕ УЖЕ СЕЙЧАС! МЕСТА ОГРАНИЧЕНЫ! КТО БУДЕТ ДОЛГО ДУМАТЬ СИДИТ ДОМА И ЗАВИДУЕТ МОЛЧА 
+				ТАКОГО <span id="tourism">ТУРИЗМА</span> ВЫ ЕЩЕ НЕ ВИДЕЛИ! БРОНИРУЙТЕ УЖЕ СЕЙЧАС! МЕСТА ОГРАНИЧЕНЫ! КТО БУДЕТ ДОЛГО ДУМАТЬ СИДИТ ДОМА И ЗАВИДУЕТ МОЛЧА 
 			<img src="./images/Emoji/1f600.png" alt="emoji" height="20px">
 			</p>
                         <p class="p-2 txt-alg-jf bg-light">
