--- a/page-Vilkovo-Oysters-Shabo.html
+++ b/page-Vilkovo-Oysters-Shabo.html
@@ -111,7 +111,7 @@
               <!-- //Хлебные крошки -->
               
                   <div class="col-lg-8 col-xl-9 main-title-text">
-                    <h3 class="title">Вилково, Устрицы и Шабо</h3>
+                    <h3 class="title" id="VilkovoOystersShabo">Вилково, Устрицы и Шабо</h3>
                 </div>
                 <div class="col-lg-8 col-xl-9 blog-left-sub">
                     
@@ -903,25 +903,9 @@
 					class="text-white" title="Туризм" href="#tourism" rel="tag">Туризм
 				</a></span>
 
-			<span class="badge rounded-pill bg-secondary"> <a onclick="selectText('сheeseFarm')"
-					class="text-white" title="Сырная Ферма Запорожье" href="#сheeseFarm" rel="tag">Вилково, Устрицы И Шабо
+			<span class="badge rounded-pill bg-secondary"> <a onclick="selectText('VilkovoOystersShabo')"
+					class="text-white" title="Вилково, Устрицы И Шабо" href="#VilkovoOystersShabo" rel="tag">Вилково, Устрицы И Шабо
 				</a></span>	
-
-		       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('apiary')"
-					class="text-white" title="Пасека Запорожье" href="#apiary" rel="tag">Пасека Запорожье
-				</a></span>
-
-		       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('honeyExcursion')"
-					class="text-white" title="Медовая экскурсия" href="#honeyExcursion" rel="tag">Медовая экскурсия
-				</a></span>
-
-		       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('cheeseTasting')"
-					class="text-white" title="Дегустация сыра" href="#cheeseTasting" rel="tag">Дегустация сыра
-				</a></span>
-
-		       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('honeyTasting')"
-					class="text-white" title="Дегустация меда" href="#honeyTasting" rel="tag">Дегустация меда
-				</a></span>
 
 			    </div>
 			</div>
