--- a/page-Vilkovo-Oysters-Shabo.html
+++ b/page-Vilkovo-Oysters-Shabo.html
@@ -104,7 +104,7 @@
                   <ol class="breadcrumb">
                      <li class="breadcrumb-item"><a class="text-primary" href="index.html">Главная</a></li>
                      <li class="breadcrumb-item"><a class="text-primary" href="packages.html">Туры</a></li>
-                     <li class="breadcrumb-item active" aria-current="page">Сырная ферма и Пасека</li>
+                     <li class="breadcrumb-item active" aria-current="page">Вилково, Устрицы И Шабо</li>
                    </ol>
                 </nav>
                </div>
