--- a/page-Vilkovo-Oysters-Shabo.html
+++ b/page-Vilkovo-Oysters-Shabo.html
@@ -148,7 +148,7 @@
 				ТАКОГО <span id="tourism">ТУРИЗМА</span> ВЫ ЕЩЕ НЕ ВИДЕЛИ! БРОНИРУЙТЕ УЖЕ СЕЙЧАС! МЕСТА ОГРАНИЧЕНЫ! КТО БУДЕТ ДОЛГО ДУМАТЬ СИДИТ ДОМА И ЗАВИДУЕТ МОЛЧА 
 			<img src="./images/Emoji/1f600.png" alt="emoji" height="20px">
 			</p>
-                        <p class="p-2 txt-alg-jf bg-light">
+                        <p class="txt-alg-jf">
                             Ждем Вас, Ваших родных, близких и друзей на 
 				<span id="ExcursionFromZaporozhye">экскурсию из Запорожья</span>! 
 				Собери компанию 16 человек, 17 едет бесплатно 
